@startuml entity_relationship_diagram.png

skinparam linetype ortho
skinparam roundcorner 8
skinparam shadowing false
skinparam entity {
  BackgroundColor #F8FAFC
  BorderColor #64748B
}
skinparam note {
  BackgroundColor #EEF2FF
  BorderColor #6366F1
}

title Entity Relationship Diagram

together {

entity "companies" as companies {
  * **id** : VARCHAR <<PK>>
  --
  name : VARCHAR
  created_at : VARCHAR
  timezone : VARCHAR(64)
}

entity "users" as users {
  * **id** : VARCHAR <<PK>>
  --
  name : VARCHAR
  * email : VARCHAR <<UK>>
  hashed_password : VARCHAR
  role : VARCHAR
  company_id : VARCHAR
  is_active : INTEGER
}

entity "contacts" as contacts {
  * **id** : VARCHAR <<PK>>
  --
  name : VARCHAR
  * email : VARCHAR <<UK>>
  phone : VARCHAR
  company : VARCHAR
  role : VARCHAR
  status : VARCHAR
  avatar : VARCHAR
  revenue : FLOAT
  lastContact : VARCHAR
  tags : JSON
  companyId : VARCHAR
  telegram_id : VARCHAR <<UK>>
  country_iso2 : VARCHAR(2)
  city : VARCHAR(128)
}

entity "chat_messages" as chat_messages {
  * **id** : VARCHAR <<PK>>
  --
  contactId : VARCHAR
  dealId : VARCHAR
  senderRole : VARCHAR
  senderId : VARCHAR
  senderName : VARCHAR
  content : VARCHAR
  messageType : VARCHAR
  timestamp : DATETIME
}
}

together {
entity "deals" as deals {
  * **id** : VARCHAR <<PK>>
  --
  leadId : VARCHAR
  contactId : VARCHAR
  title : VARCHAR
  value : FLOAT
  stage : VARCHAR
  createdAt : DATETIME
  closedAt : DATETIME
  userId : VARCHAR
  createdById : VARCHAR
  companyId : VARCHAR
  notes : VARCHAR
}

entity "deal_stage_history" as deal_stage_history {
  * **id** : VARCHAR <<PK>>
  --
  * deal_id : VARCHAR <<FK>>
  old_stage : VARCHAR
  new_stage : VARCHAR
  changed_at : DATETIME
  changed_by : VARCHAR <<FK>>
}

entity "deal_change_history" as deal_change_history {
  * **id** : VARCHAR <<PK>>
  --
  * deal_id : VARCHAR <<FK>>
  field : VARCHAR(64)
  old_value : TEXT
  new_value : TEXT
  changed_at : DATETIME
  changed_by : VARCHAR <<FK>>
}

entity "deal_tasks" as deal_tasks {
  * **id** : VARCHAR <<PK>>
  --
  * dealId : VARCHAR <<FK>>
  title : VARCHAR(512)
  dueAt : DATETIME
  isDone : INTEGER
  createdBy : VARCHAR <<FK>>
  createdAt : DATETIME
  assignedUserId : VARCHAR <<FK>>
}

entity "notes" as notes {
  * **id** : VARCHAR <<PK>>
  --
  dealId : VARCHAR
  userId : VARCHAR
  content : VARCHAR
  createdAt : DATETIME
}
}

entity "communication_logs" as communication_logs {
  * **id** : VARCHAR <<PK>>
  --
  type : VARCHAR
  direction : VARCHAR
  * contact_id : VARCHAR <<FK>>
  user_id : VARCHAR <<FK>>
  duration : INTEGER
  status : VARCHAR
  timestamp : DATETIME
  metadata_json : JSON
}


entity "activities" as activities {
  * **id** : VARCHAR <<PK>>
  --
  type : VARCHAR
  entityType : VARCHAR
  entityId : VARCHAR
  description : VARCHAR
  timestamp : VARCHAR
}

entity "ai_insights" as ai_insights {
  * **id** : VARCHAR <<PK>>
  --
  entityType : VARCHAR
  entityId : VARCHAR
  category : VARCHAR
  title : VARCHAR
  content : VARCHAR
  confidence : INTEGER
  suggestions : JSON
}

deals ||--o{ deal_stage_history : "deal_id"
deals ||--o{ deal_change_history : "deal_id"
deals ||--o{ deal_tasks : "dealId"
users ||--o{ deal_stage_history : "changed_by"
users ||--o{ deal_change_history : "changed_by"
users ||--o{ deal_tasks : "createdBy"
users ||--o{ deal_tasks : "assignedUserId"

companies ||--o{ users : "company_id"
companies ||--o{ contacts : "companyId"
companies ||--o{ deals : "companyId"

contacts ||--o{ deals : "contactId"
users ||--o{ deals : "userId / createdById"
deals ||--o{ notes : "dealId"
users ||--o{ notes : "userId"

contacts ||--o{ chat_messages : "contactId"
deals ||--o{ chat_messages : "dealId (opt.)"

contacts ||--o{ communication_logs : "contact_id"
users ||--o{ communication_logs : "user_id"

activities .. deals : «references»
activities .. contacts : «references»
activities .. users : «references»
ai_insights .. deals : «references»
ai_insights .. contacts : «references»

@enduml
